mensajes de errores

--- a/TEST/Views/Clientes/Nuevo.cshtml
+++ b/TEST/Views/Clientes/Nuevo.cshtml
@@ -28,8 +28,7 @@
 
             if (CamposVacios.length > 0)
             {
-                alert alert-success
-                $("#MsjGlobal").
+                $("#MsjGlobal").toggleClass("alert alert-error");
                 $("#MsjGlobal").html('No es posible continuar, debe ingresar ' + CamposVacios.join(" , ") + ' es obligatorio');
                 $("#MsjGlobal").show(0).delay(5000).hide(0);
                 return;
