--- a/TEST/Views/Shared/_Layout.cshtml
+++ b/TEST/Views/Shared/_Layout.cshtml
@@ -74,6 +74,15 @@
     </style>
 
     <script>
+
+        function ShowMessage( msj ,  clase )
+        {
+            var MsjGlobal = document.getElementById("MsjGlobal");
+            MsjGlobal.className = "alert " + clase;
+            $("#MsjGlobal").html(msj);
+            $("#MsjGlobal").show(0).delay(5000).hide(0);
+        }
+
         /* When the user clicks on the button,
         toggle between hiding and showing the dropdown content */
         function myFunction() {
@@ -105,7 +114,7 @@
                 <div class="col-md-2">
                 </div>
                 <div class="col-md-8">
-                    <div id="MsjGlobal" style="float:left;margin-left:20%; background-color:palegreen; padding:12px; font-size:12px; display:none;"></div>
+                    <div id="MsjGlobal" style="float:left;margin-left:20%; padding:10px; font-size:12px; display:none;"></div>
                     <img src="~/Content/Imagenes/logo.jpg" style="height:52px;" />
                     </div>
                     
