--- a/TEST/Views/Clientes/Index.cshtml
+++ b/TEST/Views/Clientes/Index.cshtml
@@ -40,7 +40,7 @@
         <div style="width: 100%;background-color: #4cb2b4;height: 2px;float:left; clear:left;">
 
         </div>
-        <div style="width: 96%; margin-left:2%; background-color:#fececd; height:28px; color:#998c66;float:left; clear:left;">
+        <div style="width: 96%; margin-left:2%;background-color:#89CBEF; height:28px; color:#0A6FA6;float:left; clear:left;">
             <div style="width: 15%; float:left;padding: 4px;">
                 Clave Cliente
             </div>
@@ -54,11 +54,11 @@
 
         @foreach (var item in Model)
         {
-            <div style="width: 96%; margin-left:2%; background-color:#fececd; height:28px; color:#1e1e1e;float:left; clear:left;">
+            <div style="width: 96%; margin-left:2%; background-color:#ECF0FD; height:28px; color:#1e1e1e;float:left; clear:left;">
                 <div style="width: 15%; float:left;padding: 4px;">
                     @item.ClienteID.ToString("000")
                 </div>
-                <div style="width: 40%; float:left;padding: 4px;">
+                <div style="width: 70%; float:left;padding: 4px;">
                     @item.Nombre
                 </div>
                 <div style="width: 13%; float:left;padding: 4px;">
