--- a/TEST/Views/Clientes/Nuevo.cshtml
+++ b/TEST/Views/Clientes/Nuevo.cshtml
@@ -150,10 +150,10 @@
 
 
 <div id="DivGuardar" style="float:right;  font-size:12px; text-align:right; margin-right:12px;margin-top:40px;">
-    <div class="DivCtes" onclick="Cancelar();" style="width:60px; float:left; margin-right:25px;">
+    <div class="DivCtes" onclick="Cancelar();" style="width:60px; float:left; margin-right:25px;background: green;padding: 6px;">
         Cancelar
     </div>
-    <div class="DivCtes" onclick="GuardarCliente();" style="width:60px; float:left;">
+    <div class="DivCtes" onclick="GuardarCliente();" style="width:60px; float:left;background: green;padding: 6px;">
         Guardar
     </div>
 </div>
