--- a/TEST/Views/Configuracion/Index.cshtml
+++ b/TEST/Views/Configuracion/Index.cshtml
@@ -68,11 +68,11 @@
     </style>
 }
 
-<div style="width:100%; float:left;">
-    <div style="width:100%; float:left; height: 40px; background-color:aquamarine; border-radius: 5px 5px 0px 0px;">
+<div style="width:80%; margin-left:20%; float:left;">
+    <div style="width:100%; float:left; height: 40px; background-color:#89CBEF; border-radius: 5px 5px 0px 0px;">
         <span style="padding: 10px;float: left;">Registro de Clientes</span>
     </div>
-    <div style="width:100%; float:left; border: 1px solid aquamarine;">
+    <div style="width:100%; float:left; border: 1px solid #89CBEF; margin-bottom:20px;">
         <div style="float:right; color: green;margin-right:20%;">
             
         </div>
@@ -105,7 +105,7 @@
             </div>
         </div>
 
-        <div class="row" style="margin-top:10px;">
+        <div class="row" style="margin-top:10px; margin-bottom:20px;">
             <div class="col-md-2">
             </div>
             <div class="col-md-2" style="text-align:right">
@@ -123,10 +123,10 @@
 
 
 <div id="DivGuardar" style="float:right;  font-size:12px; text-align:right; margin-right:12px;margin-top:40px;">
-    <div class="DivConfig" onclick="Cancelar();" style="width:60px; float:left; margin-right:25px;">
+    <div class="DivConfig" onclick="Cancelar();" style="width:60px; float:left; margin-right:25px;background: green;padding: 6px;">
         Cancelar
     </div>
-    <div class="DivConfig" onclick="GuardarConfiguracion();" style="width:60px; float:left;">
+    <div class="DivConfig" onclick="GuardarConfiguracion();" style="width:60px; float:left;background: green;padding: 6px;">
         Guardar
     </div>
 </div>
