--- a/TEST/Views/Shared/_Layout.cshtml
+++ b/TEST/Views/Shared/_Layout.cshtml
@@ -83,6 +83,11 @@
             $("#MsjGlobal").show(0).delay(5000).hide(0);
         }
 
+        $(document).ready(function () {
+            $("#myDropdown").css('display', 'block');
+        });
+        
+
         /* When the user clicks on the button,
         toggle between hiding and showing the dropdown content */
         function myFunction() {
