--- a/TEST/Views/Ventas/GridDetalleAbono.cshtml
+++ b/TEST/Views/Ventas/GridDetalleAbono.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<TEST.Models.AbonoMensualModel>
 
-<div style="float:left; width:100%; text-align: center; background-color:mediumpurple; padding:6px; margin-top:5px; margin-bottom:5px;">
+<div style="float:left; width:100%; text-align: center; background-color:#ECF0FD; padding:6px; margin-top:5px; margin-bottom:5px;">
     ABONOS MENSUALES
 </div>
 
